--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsdom": "^25.0.0",
     "mongoose": "^8.6.2",
     "next": "14.2.7",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
