--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.13",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.0",
     "framer-motion": "^11.4.0",
