--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,18 @@
 {
     "redirects": [
       {
-        "source": "http://krishikavyas.site/",
-        "destination": "https://krishikavyas.site/",
+        "source": "http://krishikavyas.site/*",
+        "destination": "https://krishikavyas.site/*",
         "permanent": true
       },
       {
-        "source": "http://www.krishikavyas.site/",
-        "destination": "https://krishikavyas.site/",
+        "source": "http://www.krishikavyas.site/*",
+        "destination": "https://krishikavyas.site/*",
         "permanent": true
       },
       {
-        "source": "https://www.krishikavyas.site/",
-        "destination": "https://krishikavyas.site/",
+        "source": "https://www.krishikavyas.site/*",
+        "destination": "https://krishikavyas.site/*",
         "permanent": true
       }
     ]
