--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
 {
     "redirects": [
       {
-        "source": "http://krishikavyas.site/*",
-        "destination": "https://krishikavyas.site/*",
+        "source": "/:path*",
+        "destination": "https://krishikavyas.site/:path*",
         "permanent": true
       },
       {
-        "source": "http://www.krishikavyas.site/*",
-        "destination": "https://krishikavyas.site/*",
-        "permanent": true
-      },
-      {
-        "source": "https://www.krishikavyas.site/*",
-        "destination": "https://krishikavyas.site/*",
+        "source": "www.krishikavyas.site/:path*",
+        "destination": "https://krishikavyas.site/:path*",
         "permanent": true
       }
     ]
