--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^144.0.0",
     "jose": "^5.9.2",
     "jsdom": "^25.0.0",
+    "lucide-react": "^0.475.0",
     "mongoose": "^8.6.2",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quilljs": "^2.0.4",
+    "react-vertical-timeline-component": "^3.5.3",
     "sass": "^1.77.8",
     "sqip": "^0.3.3"
   },
